# ChangeLog for x11-libs/fxscintilla
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fxscintilla/ChangeLog,v 1.40 2008/08/10 14:14:26 mabi Exp $

  10 Aug 2008; Matti Bickel <mabi@gentoo.org> -fxscintilla-1.71.ebuild,
  fxscintilla-1.71-r1.ebuild:
  removed ebuild re bug #226635

  17 Feb 2008; Matti Bickel <mabi@gentoo.org> fxscintilla-1.71-r1.ebuild:
  add missing inherit autotools (bug #204606)

  03 Jun 2007; Markus Rothe <corsair@gentoo.org> fxscintilla-1.71-r1.ebuild:
  Stable on ppc64; bug #108628

  24 May 2007; Christian Faulhammer <opfer@gentoo.org>
  fxscintilla-1.71-r1.ebuild:
  x86/amd64 stable, bug 108628

  22 May 2007; Matti Bickel <mabi@gentoo.org> -fxscintilla-1.62.ebuild,
  -fxscintilla-1.62-r2.ebuild:
  Remove old versions

  21 May 2007; Ferris McCormick <fmccor@gentoo.org>
  fxscintilla-1.71-r1.ebuild:
  Stable on sparc --- Bug #165352.

  21 May 2007; Jeroen Roovers <jer@gentoo.org> fxscintilla-1.71-r1.ebuild:
  Stable for HPPA (bug #108628).

  20 May 2007; Bryan Østergaard <kloeri@gentoo.org>
  fxscintilla-1.71-r1.ebuild:
  Stable on Alpha, bug 165352.

  20 May 2007; Matti Bickel <mabi@gentoo.org> fxscintilla-1.71-r1.ebuild:
  ppc stable (bug #108628)

*fxscintilla-1.71-r1 (11 May 2007)

  11 May 2007; Matti Bickel <mabi@gentoo.org> +fxscintilla-1.71-r1.ebuild:
  Drop fox-1.2 support in fxscintilla-1.71 (fox-1.2 will be removed soon)

  19 Apr 2007; Ferris McCormick <fmccor@gentoo.org>
  fxscintilla-1.62-r2.ebuild:
  Put everything back the way it was.  fxruby12 can't use 1.62-r2 library name
  is libfxscintilla-1.2.so, which fxruby12 cannot find.

  19 Apr 2007; Ferris McCormick <fmccor@gentoo.org>
  fxscintilla-1.62-r2.ebuild, fxscintilla-1.71.ebuild:
  That was wrong.  1.71 fails on sparc, 1.62-r2 is good for fox12.

  19 Apr 2007; Ferris McCormick <fmccor@gentoo.org>
  fxscintilla-1.71.ebuild:
  Stable on sparc --- part of Bug #165352 --- running for me for 4 months.
