@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/fxscintilla
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fxscintilla/ChangeLog,v 1.40 2008/08/10 14:14:26 mabi Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fxscintilla/ChangeLog,v 1.41 2010/03/12 19:59:11 mabi Exp $
+
+*fxscintilla-1.71-r2 (12 Mar 2010)
+
+  12 Mar 2010; <mabi@gentoo.org> +fxscintilla-1.71-r2.ebuild:
+  drop support for fox-1.4
 
   10 Aug 2008; Matti Bickel <mabi@gentoo.org> -fxscintilla-1.71.ebuild,
   fxscintilla-1.71-r1.ebuild:
